# Event-Ingestion-Enrichment-Platform

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py  script.py.mako
alembic/versions/: 20260303_0001_core_tables.py  20260306_0002_enrichment_tables.py  20260306_0003_query_indexes.py  20260307_0004_rollup_tables.py  README.md
docs/: api-spec.md  architecture.md
docs/adr/: 0001-modular-monolith.md  0002-celery-with-redis.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json
frontend/src/: main.tsx  styles.css
frontend/src/app/: App.tsx
plans/: frontend-mvp.md  milestone-2-data-model-and-migrations-plan.md  milestone-3-ingestion-mvp-details.md  milestone-4-enrichment-worker-plan.md  milestone-5-query-and-aggregates-plan.md  milestone-6-plan.md  orchestrator.md  project-context.md
src/event_platform/: __init__.py  main.py
src/event_platform/api/: __init__.py  dependencies.py
src/event_platform/application/: __init__.py  aggregate_service.py  enrichment_service.py  ingestion_service.py  query_service.py  rollup_service.py
tests/integration/: test_aggregates_api.py  test_enrichment_pipeline.py  test_health.py  test_ingestion_api.py  test_migration_smoke.py  test_query_api.py  test_repositories.py  test_rollup_tasks.py  test_seed.py
tests/unit/: __init__.py  test_aggregate_source_selection.py  test_rollup_coverage.py  test_rollup_dimension_policy.py  test_rollup_scheduler.py  test_rollup_windowing.py
(+50 files in other folders)
